ENG-4130 fix bottom spacing overlapping issue

--- a/sass/pages/common/PageForm.scss
+++ b/sass/pages/common/PageForm.scss
@@ -1,6 +1,7 @@
 @import "../../patternfly.scss";
 
 .PageForm {
+  padding-bottom: 40px;
 
   .PageForm__bullet-option:before {
     display: inline-block;
